Aggiunta funzioni per la gestione degli step e delle statistiche in Firestore, inclusa la logica per l'eliminazione e il caricamento dei file, e l'invio di notifiche push agli utenti.

--- a/src/server/functions/requirements.txt
+++ b/src/server/functions/requirements.txt
@@ -1,1 +1,7 @@
-firebase_functions~=0.1.0
+# Dipendenze per Firebase Functions
+firebase-functions
+firebase-admin
+
+# Dipendenze usate nelle funzioni
+requests
+google-cloud-secretmanager
