--- a/src/firebase/firebase.json
+++ b/src/firebase/firebase.json
@@ -32,6 +32,18 @@
     },
     "firestore": {
       "port": 8080
+    },
+    "database": {
+      "port": 9000
+    },
+    "hosting": {
+      "port": 5000
+    },
+    "pubsub": {
+      "port": 8085
+    },
+    "eventarc": {
+      "port": 9299
     }
   }
 }
