--- a/src/flutter/cad_match/pubspec.yaml
+++ b/src/flutter/cad_match/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   firebase_core: ^2.32.0
   cloud_firestore: ^4.17.5
   firebase_auth: ^4.20.0
+  camera: ^0.10.5+9
+  arkit_plugin: ^2.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
