--- a/src/firebase/firebase.json
+++ b/src/firebase/firebase.json
@@ -17,33 +17,43 @@
     }
   ],
   "emulators": {
-    "functions": {
-      "port": 5001
-    },
-    "storage": {
-      "port": 9199
-    },
-    "ui": {
-      "enabled": true
-    },
-    "singleProjectMode": true,
     "auth": {
+      "host": "127.0.0.1",
       "port": 9099
     },
+    "functions": {
+      "host": "127.0.0.1",
+      "port": 5001
+    },
     "firestore": {
+      "host": "127.0.0.1",
       "port": 8080
     },
     "database": {
+      "host": "127.0.0.1",
       "port": 9000
     },
     "hosting": {
+      "host": "127.0.0.1",
       "port": 5000
     },
     "pubsub": {
+      "host": "127.0.0.1",
       "port": 8085
     },
+    "storage": {
+      "host": "127.0.0.1",
+      "port": 9199
+    },
     "eventarc": {
+      "host": "127.0.0.1",
       "port": 9299
-    }
+    },
+    "ui": {
+      "enabled": true,
+      "host": "127.0.0.1",
+      "port": 4000
+    },
+    "singleProjectMode": true
   }
 }
