--- a/src/firebase/firebase.json
+++ b/src/firebase/firebase.json
@@ -55,5 +55,9 @@
       "port": 4000
     },
     "singleProjectMode": true
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   }
 }
