--- a/src/server/docker-compose.yml
+++ b/src/server/docker-compose.yml
@@ -5,6 +5,9 @@ services:
     build: .
     restart: always
     ports:
-      - "5000:5000"
+      - "8080:5000"
     environment:
       - GCP_PROJECT_ID=pmds-project
+      - USE_SECRET_MANAGER=true
+    volumes:
+      - ~/.config/gcloud:/root/.config/gcloud:ro
