--- a/src/flutter/cad_match/pubspec.yaml
+++ b/src/flutter/cad_match/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   path_provider: ^2.1.5
 
+  intl: ^0.17.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
