Refactor profile and scan detail pages; implement button styling and remove unused functions
- Removed the `_sendLoginInfoEmail` function from the profile page.
- Replaced custom button building with a unified `buildButton` function.
- Updated the scan detail page to use consistent styling and added functionality for viewing statistics and deleting scans.
- Introduced asynchronous functions to fetch user and step data in the scans page.
- Created a new `ScanItem` widget for better code organization.
- Enhanced the step detail page with improved data formatting and styling.
- Added Firebase Storage integration in the generated plugin registrant files.
- Updated dependencies in `pubspec.yaml` and `pubspec.lock` for Firebase Storage and other packages.

--- a/src/flutter/cad_match/pubspec.yaml
+++ b/src/flutter/cad_match/pubspec.yaml
@@ -20,12 +20,13 @@ dependencies:
   cloud_firestore: ^6.0.0
   firebase_auth: ^6.0.1
   camera: ^0.11.2
-  arkit_plugin: ^1.1.2
+  arkit_plugin: ^1.2.0
 
   cupertino_icons: ^1.0.8
   path_provider: ^2.1.5
 
   intl: ^0.17.0
+  firebase_storage: ^13.0.0
 
 dev_dependencies:
   flutter_test:
@@ -39,4 +40,3 @@ flutter:
 
   assets:
     - assets/logo.png
-    - assets/banner.png
