--- a/src/flutter/cad_match/pubspec.yaml
+++ b/src/flutter/cad_match/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
 
   intl: ^0.17.0
   firebase_storage: ^13.0.0
+  firebase_messaging: ^16.0.0
+  cloud_functions: ^6.0.0
 
 dev_dependencies:
   flutter_test:
