--- a/src/flutter/cad_match_webapp/pubspec.yaml
+++ b/src/flutter/cad_match_webapp/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   file_picker: ^5.2.4
+  cloud_functions: ^6.0.0
+  firebase_storage: ^13.0.0
+  firebase_core: ^4.0.0
 
 dev_dependencies:
   flutter_test:
