--- a/src/flutter/cad_match_webapp/pubspec.yaml
+++ b/src/flutter/cad_match_webapp/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cloud_functions: ^6.0.0
   firebase_storage: ^13.0.0
   firebase_core: ^4.0.0
+  firebase_auth: ^6.0.1
+  cloud_firestore: ^6.0.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
