--- a/src/flutter/cad_match_webapp/pubspec.yaml
+++ b/src/flutter/cad_match_webapp/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^6.0.1
   cloud_firestore: ^6.0.0
   intl: ^0.20.2
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
