--- a/src/flutter/cad_match/pubspec.yaml
+++ b/src/flutter/cad_match/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   vector_math: ^2.2.0
   firebase_messaging: ^16.0.1
   cloud_functions: ^6.0.1
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
