Aggiorna i percorsi di Flutter per l'ambiente di sviluppo e aggiungi la sezione degli asset nel pubspec.yaml

--- a/src/flutter/cad_match/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/src/flutter/cad_match/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\Users\stefa\Downloads\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\stefa\Progetti\PolimiXdevnut\pmdscomputervision\src\flutter\cad_match
+FLUTTER_ROOT=/Users/vittoriosironi/Development/flutter
+FLUTTER_APPLICATION_PATH=/Users/vittoriosironi/DEVNUT/client/pmdscomputervision/src/flutter/cad_match
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
