Update Flutter SDK path, enhance UI with status icons, add scan ID display, and implement 3D viewer functionality

--- a/src/flutter/cad_match_webapp/pubspec.yaml
+++ b/src/flutter/cad_match_webapp/pubspec.yaml
@@ -96,3 +96,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+dependency_overrides:
+  http: ^1.5.0
