Implement 3D model viewer
- PlyView integration
- Update scan detail handling
- Enhance UI with formatted statistics

--- a/src/flutter/cad_match/ios/Runner/Info.plist
+++ b/src/flutter/cad_match/ios/Runner/Info.plist
@@ -43,6 +43,8 @@
 	</array>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Questa applicazione utilizza la fotocamera per il LiDAR</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 </dict>
