--- a/src/flutter/cad_match/ios/Flutter/Release.xcconfig
+++ b/src/flutter/cad_match/ios/Flutter/Release.xcconfig
@@ -1,2 +1,3 @@
+// filepath: ios/Flutter/Release.xcconfig
 #include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.release.xcconfig"
 #include "Generated.xcconfig"
