Aggiunti healthcheck e migliora la configurazione dei volumi nel docker-compose

--- a/src/server/docker-compose.prod.yml
+++ b/src/server/docker-compose.prod.yml
@@ -11,9 +11,20 @@ services:
     ports:
       - "8080:5000"
     environment:
+      # TODO: Env file per le variabili globali
       - GCP_PROJECT_ID=pmds-project
       - USE_SECRET_MANAGER=true
       - GOOGLE_APPLICATION_CREDENTIALS=/secrets/gcp_credentials.json
     volumes:
       # TODO: Cambiare con il path corretto del file delle credenziali di GCP in produzione
       - /etc/pmds/secrets/gcp_credentials.json:/secrets/gcp_credentials.json:ro
+      - /var/log/pmds/backend:/app/logs:rw
+      # TODO: inserire path corretto
+      # TODO: GPU?
+    # TODO: healthcheck
+    healthcheck:
+      test: curl --fail http://localhost:5000/ || exit 1
+      interval: 40s
+      timeout: 30s
+      retries: 3
+      start_period: 60s
