--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -1,6 +1,21 @@
 # Usa un'immagine base di Python
 FROM python:3.12-slim
-RUN apt-get update && apt-get upgrade -y
+
+# Installa le dipendenze di sistema necessarie per OpenCV, CadQuery e librerie di computer vision
+RUN apt-get update && apt-get upgrade -y && \
+    apt-get install -y --no-install-recommends \
+    libgl1 \
+    libglib2.0-0 \
+    libsm6 \
+    libxext6 \
+    libxrender1 \
+    libgomp1 \
+    libglu1-mesa \
+    libxi6 \
+    libxmu6 \
+    ffmpeg \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 # Imposta la directory di lavoro all'interno del container
 WORKDIR /app
